src/index.css
/* ... */
.collapsible-show {
  display: block;
  overflow: visible;
  transition: height 0.2s ease-in-out;
}


div.nav {
  bottom: 0px;
  height: calc(100vh - 76px);
  left: 0px;
  position: sticky;
  top: 76px;
  width: 275px;
}

nav {
  background-color: var(--background-colour-navbar);
  color: var(--text-colour-navbar);
  display: block;
  flex-direction: column;
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;

}


span.icon {
  display: flex;
}



nav .group {
  display: block;
  width: 276px;
}

nav .menu {
  cursor: pointer;
  display: flex;
  height: 30px;
  padding: 10px 0px;
  padding-left: 10px;
}

nav .menu:hover {
  font-weight: bold;
}

nav .menu span {
  display: inline-block;
  height: fit-content;
  margin: auto 0px;
  width: 100%;
}

nav .menu span.icon {
  height: 20px;
  margin: auto 5px;
  width: 20px;
}

nav .menu span.text {
  width: 100%;
}

nav .menu span.menu-icon {
  display: inline-block;
  height: 25px;
  margin: auto 0px;
  padding: 0px;
  width: 25px;
}

nav .sub-menu span.icon {
  height: 20px;
  margin: auto 5px;
  padding: 0px;
  width: 20px;
}

nav .page {
  cursor: pointer;
  display: flex;
  height: 30px;
  padding: 5px 0px;
}

nav .page.active {
  background-color: var(--background-colour-navbar-active);
  border-left: 3px solid var(--border-colour-navbar-active);
}

nav .page:hover {
  background-color: var(--background-colour-navbar-hover);
  border-left: 3px solid var(--border-colour-navbar-hover);
}

nav .page span {
  display: inline-block;
  height: fit-content;
  margin: auto 0px;
}

nav .page span.icon {
  margin-left: 30px;
  padding: auto;
  width: 20px;
}

.view-port {
  display: flex;
  height: 100%;
  padding: 0px;
  margin: 0;
  width: 100%;
}



svg.help {
  fill: var(--contrasting-colour);
}

svg.history {
  fill: #777;
}

svg.delete {
  cursor: pointer;
  fill: #ff0000;
}

span.sub-script {
  font-size: smaller;
}


.external-links a {
  color: var(--text-colour);
  text-decoration: none;
}


span.text-inline {
  display: inline-flex;
  flex-direction: column;
  flex-wrap: nowrap;
  font-size: var(--font-size);
  height: var(--line-height-common);
  vertical-align: middle;
  width: fit-content;
}

span.text-inline a {
  align-self: flex-end;
  display: inline-flex;
  flex-wrap: nowrap;
  height: var(--line-height-common);
  width: fit-content;
}

span.text-inline span.icon {
  align-self: center;
  display: inline-flex;
  flex-direction: row;
}

span.text-inline span.icon svg {
  align-self: center;
  display: flex;
  margin-right: .3rem;
}

span.text-inline span.text {
  margin-right: .3rem;
  width: fit-content;
  text-wrap: nowrap ;

}


span.text-inline span.sub-script {
  font-size: smaller;
  margin-right: .3em;
  color: var(--text-colour-help);
  vertical-align: bottom;
}



span.badge {
  background-color: var(--background-colour-active);
  border: 1px solid var(--border-colour-form-field);
  border-radius: 15px;
  display: inline-flex;
  font-size: 10pt;
  padding: 0px 3px;
  text-align: left;
  margin: auto 0px;
  vertical-align: bottom;
}

span.badge svg {
  margin: auto 0px;
}


span.badge span {
  line-height: normal;
}

span.badge.badge-icon {
  height: fit-content;
}

span.badge span.badge-text {
  background-color: var(--background-colour-active);
  border-bottom-right-radius: 10px;
  border-top-right-radius: 10px;
  height: fit-content;
  margin: 2px 2px;
  padding: 0 3px 0 2px;
}

a.badge-link {
  text-decoration: none;
  color: inherit;
}

span.badge.badge-icon.badge-icon-action-add {
  fill: var(--text-colour-software-action-add);
}

span.badge.badge-text.badge-text-action-add {
  color: var(--text-colour-software-action-add);
}

span.badge.badge-icon.badge-icon-action-install {
  fill: var(--text-colour-software-action-install);
}

span.badge.badge-text.badge-text-action-install {
  color: var(--text-colour-software-action-install);
}

span.badge.badge-icon.badge-icon-action-remove {
  fill: var(--text-colour-software-action-remove);
}

span.badge.badge-text.badge-text-action-remove {
  color: var(--text-colour-software-action-remove);
}






section {
  background-color: var(--background-colour-active);
  border: 1px solid var(--border-colour);
  padding: 0px;
  flex-grow: 1;
  margin: 0 .8rem .8rem .8rem;
}

section.error {
  display: flexbox;
  padding: 0px;
}

section.error h2,
section.error h3 {
  display: block;
  margin: 0px auto;
  text-align: center;
  width: 90%;
}

section.error p,
section.error pre {
  display: block;
  margin: 0px auto;
  width: fit-content;
  padding: 50px;
}

section .nav-tabs {
  background-color: var(--background-colour-active);
  border-bottom: 1px solid var(--border-colour);
  display: flex;
  height: 50px;

}

section .nav-tabs .nav-tabs-tab {
  border-bottom: 1px solid var(--border-colour);
  color: var(--text-colour-navtab);
  cursor: pointer;
  display: inline-flex;
  height: 50px;
  margin: auto 0px;
}

section .nav-tabs .nav-tabs-tab:hover {
  border-bottom: 3px solid var(--border-colour-navbar-hover);
}


section .nav-tabs .nav-tabs-tab.active {
  border-bottom: 3px solid var(--contrasting-colour);
}


section .nav-tabs .nav-tabs-tab div {
  display: flex;
  width: fit-content;
  margin: auto 0px;
  padding: 0% 10px;
}

section .nav-tabs .nav-tabs-tab span {
  display: inline-block;
  height: fit-content;
  margin: auto 0px;
  padding: 0%;
}


section .nav-tabs .nav-tabs-tab .nav-tabs-icon {
  color: var(--background-colour-active);
  height: 25px;
  width: 25px;
  margin: auto 0px;
}

section .nav-tabs .nav-tabs-tab .nav-tabs-icon svg {
  fill: var(--text-colour-navtab);
  height: 25px;
  width: 25px;
}

section .nav-tabs .nav-tabs-tab .nav-tabs-text {
  font-size: 13pt;
}


section .content table {
  width: 100%;
}

section .content table tr.collapsible-row {
  height: fit-content;
  text-align: left;
}

section .content table tr.collapsible-row td {
  height: fit-content;
  padding: 0px;
}
/* ... */

